--- a/contact.html
+++ b/contact.html
@@ -10,35 +10,43 @@
 
   <title>Modern Business - Start Bootstrap Template</title>
 
+  <title>VESCONC LTD.</title>
+
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar fixed-top navbar-expand-lg fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Start Bootstrap</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand d-none d-md-block" href="index.html">Vescon Construction Ltd.</a>
+      <a class="navbar-brand d-md-none" href="index.html">VesconC Ltd.</a>
+      <button class="navbar-toggler navbar-toggler-right navbar-dark" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
+            <a class="nav-link" href="index.html#people">People</a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="contact.html">Contact</a>
+          <li class="nav-item">
+            <a class="nav-link" href="ongoing.html">Projects</a>
           </li>
-          <li class="nav-item dropdown">
+          <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Portfolio
             </a>
@@ -70,7 +78,7 @@
               <a class="dropdown-item" href="faq.html">FAQ</a>
               <a class="dropdown-item" href="404.html">404</a>
               <a class="dropdown-item" href="pricing.html">Pricing Table</a>
-            </div>
+            </div> -->
           </li>
         </ul>
       </div>
@@ -85,7 +93,7 @@
       <small>Subheading</small>
     </h1>
 
-    <ol class="breadcrumb">
+    <ol class="breadcrumb mb-5">
       <li class="breadcrumb-item">
         <a href="index.html">Home</a>
       </li>
@@ -93,32 +101,42 @@
     </ol>
 
     <!-- Content Row -->
-    <div class="row">
+    <div class="container-fluid">
       <!-- Map Column -->
-      <div class="col-lg-8 mb-4">
+      <!-- <div class="col-lg-8 mb-4"> -->
         <!-- Embedded Google Map -->
-        <iframe style="width: 100%; height: 400px; border: 0;" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
-      </div>
+        <!-- <iframe style="width: 100%; height: 400px; border: 0;" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe> -->
+      <!-- </div> -->
       <!-- Contact Details Column -->
-      <div class="col-lg-4 mb-4">
-        <h3>Contact Details</h3>
+
+      <h3 class="h3 mb-3">Contact Details</h3>
+      <div class="row">
+      <div class="col-lg-6 mb-4">
         <p>
-          3481 Melrose Place
-          <br>Beverly Hills, CA 90210
+          <span class="font-weight-bold">Shyam Khandelwal</span>
+          <br>P.O. Box 18945, G.P.O Nairobi
+          <br>103 Acacia, Langham Court
+          <br>Tariffa Road
           <br>
-        </p>
-        <p>
-          <abbr title="Phone">P</abbr>: (123) 456-7890
-        </p>
-        <p>
-          <abbr title="Email">E</abbr>:
-          <a href="mailto:name@example.com">name@example.com
-          </a>
-        </p>
-        <p>
-          <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM
+          <br>Tel: <span class="text-info">+254 713 364 504</span>
+          <br>Tel: <span class="text-info">+254 717 145 555</span>
+          <br>
+          <br>Email: <a href="mailto:info@vesconcltd.com"><span class="text-info">info@vesconcltd.com</span></a>
         </p>
       </div>
+      <div class="col-lg-6 mb-4">
+        <p>
+          <span class="font-weight-bold">Pravin Chowhan</span>
+          <br>Tel: <span class="text-info">+254 714 681 717</span>
+          <br>Tel: <span class="text-info">+254 780 681 717</span>
+          <br>
+          <br>Email: <a href="mailto:pravin@vesconcltd.com"><span class="text-info">pravin@vesconcltd.com</span></a>
+        </p>
+        <p>
+          Hours: Monday - Friday: 9:00 AM to 5:00 PM
+        </p>
+      </div>
+    </div>
     </div>
     <!-- /.row -->
 
@@ -168,7 +186,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy;VesconC Ltd. 2021</p>
     </div>
     <!-- /.container -->
   </footer>
