--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           <li class="nav-item">
             <a class="nav-link" href="ongoing.html">Projects</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
           <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Portfolio
