--- a/ongoing.html
+++ b/ongoing.html
@@ -196,7 +196,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy;VesconC Ltd. 2021</p>
     </div>
     <!-- /.container -->
   </footer>
