--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,9 @@
 
   <title>VESCONC LTD.</title>
 
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
@@ -28,7 +29,7 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar fixed-top navbar-expand-lg fixed-top">
+  <nav id="mainNavbar" class="navbar fixed-top navbar-expand-lg fixed-top">
     <div class="container">
       <a class="navbar-brand d-none d-md-block" href="index.html">Vescon Construction Ltd.</a>
       <a class="navbar-brand d-md-none" href="index.html">VesconC Ltd.</a>
@@ -101,104 +102,65 @@
     </ol>
 
     <!-- Content Row -->
-    <div class="container-fluid">
-      <!-- Map Column -->
-      <!-- <div class="col-lg-8 mb-4"> -->
-        <!-- Embedded Google Map -->
-        <!-- <iframe style="width: 100%; height: 400px; border: 0;" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe> -->
-      <!-- </div> -->
-      <!-- Contact Details Column -->
-
+    <section >
       <h3 class="h3 mb-3">Contact Details</h3>
-      <div class="row">
-      <div class="col-lg-6 mb-4">
-        <p>
-          <span class="font-weight-bold">Shyam Khandelwal</span>
-          <br>P.O. Box 18945, G.P.O Nairobi
-          <br>103 Acacia, Langham Court
-          <br>Tariffa Road
-          <br>
-          <br>Tel: <span class="text-info">+254 713 364 504</span>
-          <br>Tel: <span class="text-info">+254 717 145 555</span>
-          <br>
-          <br>Email: <a href="mailto:info@vesconcltd.com"><span class="text-info">info@vesconcltd.com</span></a>
-        </p>
-      </div>
-      <div class="col-lg-6 mb-4">
-        <p>
-          <span class="font-weight-bold">Pravin Chowhan</span>
-          <br>Tel: <span class="text-info">+254 714 681 717</span>
-          <br>Tel: <span class="text-info">+254 780 681 717</span>
-          <br>
-          <br>Email: <a href="mailto:pravin@vesconcltd.com"><span class="text-info">pravin@vesconcltd.com</span></a>
-        </p>
-        <p>
-          Hours: Monday - Friday: 9:00 AM to 5:00 PM
-        </p>
-      </div>
-    </div>
-    </div>
-    <!-- /.row -->
+      <div id="contactDetails" class="row">
+        <div class="col-lg-6 mb-4 contactCard">
+          <div class="card h-100">
+            <h4 class="card-header font-weight-bold">Shyam Khandelwal</h4>
+            <h4 class="card-header">Director</h4>
+            <div class="card-body">
+              Address:
+              <br>P.O. Box 18945, G.P.O Nairobi
+              <br>103 Acacia, Langham Court
+              <br>Tariffa Road
+            </div>
+            <div class="card-body">
+              Tel: <span class="text-info">+254 713 364 504</span>
+              <br>Tel: <span class="text-info">+254 717 145 555</span>
+              <br>
+              <br>Email: <a href="mailto:info@vesconcltd.com"><span class="text-info">info@vesconcltd.com</span></a>
+            </div>
+          </div>
+        </div>
 
-    <!-- Contact Form -->
-    <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-    <div class="row">
-      <div class="col-lg-8 mb-4">
-        <h3>Send us a Message</h3>
-        <form name="sentMessage" id="contactForm" novalidate>
-          <div class="control-group form-group">
-            <div class="controls">
-              <label>Full Name:</label>
-              <input type="text" class="form-control" id="name" required data-validation-required-message="Please enter your name.">
-              <p class="help-block"></p>
-            </div>
-          </div>
-          <div class="control-group form-group">
-            <div class="controls">
-              <label>Phone Number:</label>
-              <input type="tel" class="form-control" id="phone" required data-validation-required-message="Please enter your phone number.">
-            </div>
-          </div>
-          <div class="control-group form-group">
-            <div class="controls">
-              <label>Email Address:</label>
-              <input type="email" class="form-control" id="email" required data-validation-required-message="Please enter your email address.">
-            </div>
-          </div>
-          <div class="control-group form-group">
-            <div class="controls">
-              <label>Message:</label>
-              <textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
-            </div>
-          </div>
-          <div id="success"></div>
-          <!-- For success/fail messages -->
-          <button type="submit" class="btn btn-primary" id="sendMessageButton">Send Message</button>
-        </form>
-      </div>
+        <div class="col-lg-6 mb-4 contactCard">
+          <div class="card h-100">
+            <h4 class="card-header font-weight-bold">Pravin Chowhan</h4>
+            <h4 class="card-header">Director</h4>
 
-    </div>
-    <!-- /.row -->
+            <div class="card-body">
+              Tel: <span class="text-info">+254 714 681 717</span>
+              <br>Tel: <span class="text-info">+254 780 681 717</span>
+              <br>
+              <br>Email: <a href="mailto:pravin@vesconcltd.com"><span class="text-info">pravin@vesconcltd.com</span></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </div>
-  <!-- /.container -->
 
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
+  <footer id="footer" class="py-5 bg-dark">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy;VesconC Ltd. 2021</p>
     </div>
     <!-- /.container -->
   </footer>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
   <!-- Contact form JavaScript -->
   <!-- Do not edit these files! In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
   <script src="js/jqBootstrapValidation.js"></script>
   <script src="js/contact_me.js"></script>
+  
+  <!-- Bootstrap core JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+  <script src="./js/navBarScroll.js"></script>
 
 </body>
 
