--- a/ongoing.html
+++ b/ongoing.html
@@ -25,7 +25,8 @@
 
   <nav id="mainNavbar"  class="navbar fixed-top navbar-expand-lg fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">VesconC Ltd.</a>
+      <a class="navbar-brand d-none d-md-block" href="index.html">Vescon Construction Ltd.</a>
+      <a class="navbar-brand d-md-none" href="index.html">VesconC Ltd.</a>
       <button class="navbar-toggler navbar-toggler-right navbar-dark" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
