Added contact photos and project info

--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@
 
       <div class="row">
         <div class="col-xl-6 col-lg-6 mb-4">
-          <img src="" alt="" class="fluid-image contactImage" />
+          <img src="./static-resources/images/shyam.jpeg" alt="" class="fluid-image contactImage" />
           <h4 class="font-weight-bold">Shyam Khandelwal</h4>
           <h5 class="">Director</h5>
         </div>
         <div class="col-xl-6 col-lg-6 mb-4">
-          <img src="" alt="" class="fluid-image contactImage" />
+          <img src="./static-resources/images/pravinBhai2.jpg" alt="" class="fluid-image contactImage" />
           <h4 class="font-weight-bold">Pravin Chowhan</h4>
           <h5 class="">Director</h5>
         </div>
