--- a/ongoing.html
+++ b/ongoing.html
@@ -1,182 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
-<head>
+    <title>VESCONC LTD.</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
 
-  <title>VESCONC LTD.</title>
+    <!-- Custom styles for this template -->
+    <link href="css/modern-business.css" rel="stylesheet" />
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-  <!-- Custom styles for this template -->
-  <link href="css/modern-business.css" rel="stylesheet">
-
-  <!-- font -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
-</head>
-
-<body>
-
-  <nav id="mainNavbar"  class="navbar fixed-top navbar-expand-lg fixed-top">
-    <div class="container">
-      <a class="navbar-brand d-none d-md-block" href="index.html">Vescon Construction Ltd.</a>
-      <a class="navbar-brand d-md-none" href="index.html">VesconC Ltd.</a>
-      <button class="navbar-toggler navbar-toggler-right navbar-dark" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html#people">People</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
+  <body>
+    <nav id="mainNavbar" class="navbar fixed-top navbar-expand-lg fixed-top">
+      <div class="container">
+        <a class="navbar-brand d-none d-md-block" href="index.html"
+          >Vescon Construction Ltd.</a
+        >
+        <a class="navbar-brand d-md-none" href="index.html">VesconC Ltd.</a>
+        <button
+          class="navbar-toggler navbar-toggler-right navbar-dark"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html#people">People</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-  <!-- Page Content -->
-  <div class="container">
-
-    <!-- Page Heading/Breadcrumbs -->
-    <h1 class="h1 mt-4 mb-3">Projects
-    </h1>
-
-    <ol class="breadcrumb mb-5">
-      <li class="breadcrumb-item">
-        <a href="index.html">Home</a>
-      </li>
-      <li class="breadcrumb-item active">ongoing projects</li>
-    </ol>
-
-    <section class="tableSection">
-      <h3>Ongoing projects</h3>
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Project</th>
-            <th scope="col">Client</th>
-            <th scope="col">Cost (in Ksh.)</th>
-            <th scope="col">Remarks</th>
-          </tr>
-        </thead>
-        <tbody >
-          <tr>
-            <th scope="row">1</th>
-            <td>Project name</td>
-            <td>Client-name</td>
-            <td>1,234,567</td>
-            <td>this remark</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Project name</td>
-            <td>Client-nament</td>
-            <td>1,234,567</td>
-            <td>this remark</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-
-    <section class="tableSection">
-      <h3>Completed projects</h3>
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Project</th>
-            <th scope="col">Client</th>
-            <th scope="col">Cost (in Ksh.)</th>
-            <th scope="col">Remarks</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Project name</td>
-            <td>Client-name</td>
-            <td>1,234,567</td>
-            <td>this remark</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Project name</td>
-            <td>Client-name</td>
-            <td>1,234,567</td>
-            <td>this remark</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-
-    <section class="tableSection">
-      <h3>Projects Completed as Labour Contractor</h3>
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Project</th>
-            <th scope="col">Client</th>
-            <th scope="col">Cost (in Ksh.)</th>
-            <th scope="col">Remarks</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Project name</td>
-            <td>Client-name</td>
-            <td>1,234,567</td>
-            <td>this remark</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Project name</td>
-            <td>Client-name</td>
-            <td>1,234,567</td>
-            <td>this remark</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-
-    
-
-    
-
-
-
-  </div>
-  <!-- /.container -->
-
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
+    <!-- Page Content -->
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy;VesconC Ltd. 2021</p>
+      <!-- Page Heading/Breadcrumbs -->
+      <h2 class="h1 mt-4 mb-3">Projects</h2>
+
+      <ol class="breadcrumb mb-5">
+        <li class="breadcrumb-item">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="breadcrumb-item active">ongoing projects</li>
+      </ol>
+
+      <section class="tableSection">
+        <h3>Ongoing projects</h3>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Project</th>
+              <th scope="col">Client</th>
+              <th scope="col">Cost (in Ksh.)</th>
+              <th scope="col">Remarks</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>
+                Project Proposed refurbishment and extension to residential
+                house on plot LR 7741 / 333 Kitsuru estate / road Nairobi
+              </td>
+              <td>
+                William Kinyanjui Qs YMR Consultant firm Nairobi Tel: +254 723
+                403 677
+              </td>
+              <td>38,929,772</td>
+              <td>Main Contractor</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>
+                Proposed residential construction in Runda Nairobi Suburbs at
+                plot block 111/208 and block 111/184, Runda Mumwe, Kiambu
+              </td>
+              <td>
+                The manager of Inter-Aviation Ltd Harish Rbadia. Tel: +971 555
+                386 105
+              </td>
+              <td>20,923,349.75</td>
+              <td>Main Contractor</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <section class="tableSection">
+        <h3>Completed projects</h3>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Project</th>
+              <th scope="col">Client</th>
+              <th scope="col">Cost (in Ksh.)</th>
+              <th scope="col">Remarks</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>
+                Proposed construction of residential flats for publix —Africa
+                limited on Plot LR No CIS Mara Oleleshwa 2684 - Narok
+              </td>
+              <td>
+                The permanent Secretary, Ministry of Public Works, P.O. Box
+                30743 - 00100, Nairobi
+              </td>
+              <td>27,836,310</td>
+              <td>Main Contractor</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <section class="tableSection">
+        <h3>Projects Completed as Labour Contractor</h3>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Project</th>
+              <th scope="col">Client</th>
+              <th scope="col">Cost (in Ksh.)</th>
+              <th scope="col">Remarks</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>
+                Proposed Kenya National spatial Data Infrastructure (KNSDI)
+                complex at Survey of Kenya, Ruaraka, Kenya
+              </td>
+              <td>
+                The permanent Secretary, Ministry of Public Works, P.O. Box
+                30743 - 00100, Nairobi
+              </td>
+              <td>813,398,857</td>
+              <td>Main Labour Contractor</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>
+                Proposed Development of National Intelligence Academy (NIA)
+              </td>
+              <td>Director General (NIS) P.O. Box 30091 — 00100, Nairobi</td>
+              <td>1,907,198,445</td>
+              <td>Main Labour Sub-Contractor</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>
+                Proposed construction and completion of fourteen 3BHK/4BHK houses
+                at shaba village mlolongo along Mombasa road. Block 1&2
+              </td>
+              <td>
+                Lafey construction co / Taran Contractors Amos / Dahil C.o.W / S
+                agent 0711 325 260
+              </td>
+              <td>77,836,310</td>
+              <td>Main Sub-Contractor</td>
+            </tr>
+            <tr>
+              <th scope="row">4</th>
+              <td>
+                Proposed Research, Technology & Innovation Laboratories &
+                Related Infrastructure on Plot LR No. 209/5811, Dunga Road,
+                South B, Nairobi
+              </td>
+              <td>
+                The Director, Kenya Industrial Research and Development
+                Institute (KIRDI), P.O. Box 30650 - 00100, Nairobi
+              </td>
+              <td>3,933,008,763</td>
+              <td>Main Labour Sub-Contractor</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </div>
     <!-- /.container -->
-  </footer>
 
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">
+          Copyright &copy;VesconC Ltd. 2021
+        </p>
+      </div>
+      <!-- /.container -->
+    </footer>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
 
-  <script src="./js/navBarScroll.js"></script>
-</body>
-
+    <script src="./js/navBarScroll.js"></script>
+  </body>
 </html>
