--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <div class="card h-100">
             <img
               id="cardImage"
-              src="./static-resources/images/Screenshot 2021-03-29 at 10.43.51 AM.png"
+              src="./static-resources/images/project1.1.png"
               alt=""
               class="fluid-image center-cropped"
             />
@@ -187,7 +187,7 @@
           <div class="card h-100">
             <img
               id="cardImage"
-              src="./static-resources/images/Screenshot 2021-03-29 at 10.43.58 AM.png"
+              src="./static-resources/images/project1.2.png"
               alt=""
               class="fluid-image center-cropped"
             />
@@ -204,7 +204,7 @@
           <div class="card h-100">
             <img
               id="cardImage"
-              src="./static-resources/images/Screenshot 2021-03-29 at 10.44.05 AM.png"
+              src="./static-resources/images/project2.1.png"
               alt=""
               class="fluid-image center-cropped"
             />
@@ -221,7 +221,7 @@
           <div class="card h-100">
             <img
               id="cardImage"
-              src="./static-resources/images/Screenshot 2021-03-29 at 10.44.17 AM.png"
+              src="./static-resources/images/project2.2.png"
               alt=""
               class="fluid-image center-cropped"
             />
@@ -238,7 +238,7 @@
           <div class="card h-100">
             <img
               id="cardImage"
-              src="./static-resources/images/Screenshot 2021-03-29 at 10.44.27 AM.png"
+              src="./static-resources/images/project3.png"
               alt=""
               class="fluid-image center-cropped"
             />
@@ -255,7 +255,7 @@
           <div class="card h-100">
             <img
               id="cardImage"
-              src="./static-resources/images/Screenshot 2021-03-29 at 10.44.34 AM.png"
+              src="./static-resources/images/project4.png"
               alt=""
               class="fluid-image center-cropped"
             />
