--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,10 @@
 
 </head>
 
-<body>
+<body class="d-flex vh-100 flex-column p-0 m-0 justify-content-start">
 
   <!-- Navigation -->
-  <nav id="mainNavbar" class="navbar fixed-top navbar-expand-lg fixed-top">
+  <nav id="mainNavbar" class="navbar navbar-expand-lg sticky-top">
     <div class="container">
       <a class="navbar-brand d-none d-md-block" href="index.html">Vescon Construction Ltd.</a>
       <a class="navbar-brand d-md-none" href="index.html">VesconC Ltd.</a>
@@ -53,10 +53,10 @@
   </nav>
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="main container mt-4">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h2 class="h1 mt-4 mb-3">Contact Details</h2>
+    <h2 class="h1">Contact Details</h2>
 
     <ol class="breadcrumb mb-5">
       <li class="breadcrumb-item">
@@ -67,7 +67,6 @@
 
     <!-- Content Row -->
     <section >
-  
       <div id="contactDetails" class="row">
         <div class="col-lg-6 mb-4 contactCard">
           <div class="card h-100">
@@ -107,7 +106,7 @@
   </div>
 
   <!-- Footer -->
-  <footer id="footer" class="py-5 bg-dark">
+  <footer id="footer" class="py-5 bg-dark mt-auto">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy;VesconC Ltd. 2021</p>
     </div>
