--- a/ongoing.html
+++ b/ongoing.html
@@ -24,7 +24,7 @@
 
 <body class="d-flex vh-100 flex-column p-0 m-0 justify-content-start">
   
-  <nav id="mainNavbar" class="navbar navbar-expand-lg sticky-top">
+  <nav id="mainNavbar" class="navbar navbar-expand-lg fixed-top">
     <div class="container">
       <a class="navbar-brand d-none d-md-block" href="index.html">Vescon Construction Ltd.</a>
       <a class="navbar-brand d-md-none" href="index.html">VesconC Ltd.</a>
